--- a/grupwork/goa/signup.html
+++ b/grupwork/goa/signup.html
@@ -1,8 +1,8 @@
-
+<html>
 <i><b>registration.</b></i>
 <br>
 <br>
-    
+    <body></body>
     <form>
 
         <label for="enter-name">first name: </label>
@@ -28,8 +28,9 @@
         <input type="submit">
 
 
-
+    </body>
     </form>
+    </html>
 
 
 
