--- a/level 67/homework/index.html
+++ b/level 67/homework/index.html
@@ -1,2 +1,20 @@
 <!--ww3shool Additional material-->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Frontend Mentor | Social links profile</title>
+</head>
+<body>
+    <div class="box"></div>
+
+    <p>Jessica Randall</p>
+
+
+    <img src="image.png">
+</body>
+</html>
