--- a/level 68/homework/portfolio/index.html
+++ b/level 68/homework/portfolio/index.html
@@ -12,10 +12,10 @@
             <a href="aboutme.html">aboutme</a>
             <br>
             <br>
-            <a href="projects.html">projects</a>
+            <a href="registration.html">registration</a>
             <br>
             <br>
-            <a href="contacts.html">contacts</a>
+            
         </nav>
     </header>
 
@@ -25,7 +25,7 @@
 
     <main>
         <div>
-            <p>andria shengelia</p>
+            <p>my photo</p>
             <hr>
             <img src="myphoto.jpg" >
             </div>
