--- a/level 68/homework/portfolio/registration.html
+++ b/level 68/homework/portfolio/registration.html
@@ -3,46 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>registration</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+
     <link rel="stylesheet" href="registration.css">
 </head>
 <body>
-    <div class="registration-1">
-    <p>
-        registration
-    </p>
-    </div>
+   
 
-
-
-
-
-
-
-    <div>
     <form>
+        <h1>login </h1>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+        <label for="password">password:</label>
+        <input type="password" id="password ">
+        <p id="forgot-password"><a href="#">forgot password?</a></p>
+        <button type="submit">submit</button>
+        <hr>
+        <h2>or login using </h2>
+        <div class="container">
+           
+            <i class="fa fa-facebook-f" style="font-size: 36px;"></i>
+            <i class="fa fa-twitter" style="font-size: 36px;"></i>
+            <i class="fa fa-google" style="font-size: 36px;"></i>
 
-        <label for="enter-name">first name: </label>
-        <input type="text" id="enter-name"  name="user-name">
-        <br>
-        <br>
-        <label for="enter-email">email: </label>
-        <input type="email" id="enter-email" name="user-email">
-        <br>
-        <br>
-        <label for="enter-password">password: </label>
-        <input type="password" id="enter-password" name="user-password">
-        <br>
-        <br>
-        <label for="enter-checkbox">male: </label>
-        <input type="checkbox" id="enter-checkbox" name="user-checkbox" >
-        <br>
-        <br>
-        <label for="enter-checkbox1">female: </label>
-        <input type="checkbox" id="enter-checkbox1" name="enter-checkbox2">
-        <br>
-        <br>
-        <input type="submit">
-    </div>
+        </div>
+        <p id=sign-up-link><a href="or sign up with a new accaunt "></a> </p>
+
+        <div>
+        <button class="submit-button ">submit</button>
+        </div>
 </body>
 </html>
