--- a/level 78/classwork/index.html
+++ b/level 78/classwork/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<h1>about me </h1>
 <body>
-    
+    <p>hi im andria my lastname is shengelia i love programing also sometimes to play games</p>
+    <img src="myphoto copy.jpg" alt="my photo">
 </body>
 </html>
