--- a/level 164/classwork/index.html
+++ b/level 164/classwork/index.html
@@ -6,10 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-
+    <input type="text" placeholder="ENTER YOUR NAME" id="name">
+    <br>
+    <input type="email" placeholder="ENTER YOUR EMAIL" id="email">
+    <br>
+    <input type="number" placeholder="ENTER YOUR AGE" id="age">
+    <br>
+    <input type="submit" id="submit">
     <script src="script.js"></script>
 </body>
 </html>
